--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,14 @@ services:
     volumes:
       - .:/usr/share/nginx/html
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+  
+  db: 
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_DATABASE: 'craftbeers'
+      MYSQL_ROOT_PASSWORD: '1234'
+    ports:
+      - 3306:3306
+    expose:
+      - '3306'
