--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - .:/var/www/html
       - ./docker/www.conf:/usr/local/etc/php-fpm.d/www.conf
+      - ./docker/php.ini:/usr/local/etc/php/conf.d/php.ini
     ports:
       - 9000:9000
 
@@ -21,7 +22,7 @@ services:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
   
   db: 
-    image: mysql
+    image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: 'craftbeers'
