--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   php-fpm:
     image: php:7.2-fpm-alpine
+    # command: 'docker-php-ext-install mysqli'
     container_name: php-fpm
     volumes:
       - .:/var/www/html
